feat: Introduce admin page for device and R2 storage management, enhancing R2 backup/restore with fail-closed safety and improved sync.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@cloudflare/sandbox": "*",
+    "@cloudflare/sandbox": "^0.7.4",
     "@cloudflare/vite-plugin": "^1.0.0",
     "@cloudflare/workers-types": "^4.20250109.0",
     "@types/node": "^22.0.0",
@@ -40,7 +40,7 @@
     "typescript": "^5.9.3",
     "vite": "^6.0.0",
     "vitest": "^4.0.18",
-    "wrangler": "^4.50.0"
+    "wrangler": "^4.65.0"
   },
   "author": "",
   "license": "Apache-2.0",
